# clab-ai-mcp

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  agent.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
airflow/: bgp_health_dag.py
docs/: DESIGN.md  THREAT_MODEL.md
docs/adr/: 0001-mcp-not-langchain.md  0002-allowlist-not-sandbox.md  0003-mock-mode-and-audit.md
mocks/: bgp_summary.txt  clickhouse_peer_events_for_host.json  clickhouse_peer_route_counts.json  clickhouse_prefix_history.json  clickhouse_top_flapping_prefixes.json  peeringdb_asn13335.json  rpki_valid.json
scripts/: hitl_demo.py
templates/: arista_bgp_peer.j2  frr_bgp_peer.j2  juniper_bgp_peer.j2
tests/: conftest.py  test_agent.py  test_eval.py  test_injection.py
tools/: __init__.py  audit.py  bgp_tools.py  cache.py  clickhouse_tool.py  config_tools.py  hitl.py  obs_sink.py  peeringdb_tools.py  rpki_tools.py  schemas.py  telemetry.py  validation.py
topology/: lab.clab.yml
