[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clab-llm-netops-agent"
version = "0.1.0"
dependencies = [
    "anthropic>=0.7.0",
    "mcp>=0.1.0",
    "netmiko>=4.0.0",
    "jinja2>=3.0.0",
    "requests>=2.28.0",
    "apache-airflow>=2.5.0",
]
